--- a/myapp/src/app/products/products.component.html
+++ b/myapp/src/app/products/products.component.html
@@ -1,9 +1,6 @@
-<!--Two way data binding,so we have to enable ng module by adding forms module-->
 <label>Product Name</label>
 <input type="text" class="form-control w-25" [(ngModel)]="productName" />
-<p>{{ productName }}</p>
-
-<!--Property and event binding-->
+<!-- <p>{{ productName }}</p> -->
 <button
   class="btn btn-sm btn-primary mt-2"
   [disabled]="!allowNewProduct"
@@ -11,13 +8,11 @@
 >
   Add Product
 </button>
-
-<!--ngIf/ngFor-->
-<p *ngIf="productCreated">{{ productCreationStatus }}</p>
+<!-- <p *ngIf="productCreated">{{ productCreationStatus }}</p> -->
 
 <div class="container mt-5">
   <p *ngFor="let product of products; let i = index">
     {{ i + 1 }}. {{ product }}
   </p>
+  <!-- <app-product></app-product> -->
 </div>
-<!-- <app-product></app-product> -->
